--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
+    "request-ip": "^3.3.0",
     "sequelize": "^6.37.5"
   }
 }
