--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "styled-components": "^6.1.14",
     "swiper": "^11.2.1",
     "tsparticles": "^3.8.1",
+    "uuid": "^11.1.0",
     "wow.js": "^1.2.2",
     "wowjs": "^1.1.3",
     "yup": "^1.6.1"
